codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ HsinCLI (v0.155.0)                                             │
│                                                                    │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date      │
│ information on rate limits and credits                             │
│                                                                    │
│  Model:            gpt-5.1-codex-max (reasoning high, summaries de │
│  Directory: [[workspace]]                                          │
│  Permissions:      Custom (workspace with network access, Ask for  │
│  Agents.md:        <none>                                          │
│                                                                    │
│  Token usage:      1.9K total  (1K input + 900 output)             │
│  Context window:   100% left (2.25K used / 272K)                   │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
